Move BeanBus from Collection to Consumer destination.